sumo/tests/sumo/spec/flow/errors/end_before_begin/errors.sumo
Error: Flow 'f1' ends before or at its begin time.
Quitting (on error).
